--- a/config/database.yml
+++ b/config/database.yml
@@ -1,12 +1,17 @@
 development: &default
   adapter: postgresql
   encoding: unicode
-  database: postgres
+  database: notekeeper_development
   pool: 5
-  username: postgres
+  username: notekeeper
   password:
   host: db
 
 test:
   <<: *default
   database: notekeeper_test
+
+production:
+  <<: *default
+  database: notekeeper
+  password: ''
